# tenantbox-python

./: README.md  pyproject.toml  requirements.txt  test_smoke.py
tenantbox/: __init__.py  _http.py  client.py  exceptions.py  models.py  utils.py
tenantbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_client.py
